testsuite/tests/typing-recmod/t09bad.compilers.reference
File "t09bad.ml", line 10, characters 15-41:
10 | module rec A : sig type 'a t = 'a B.t end
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: In the definition of B.t, type 'a array A.t should be 'a A.t
